--- a/sass/blocks/_from.scss
+++ b/sass/blocks/_from.scss
@@ -1,6 +1,6 @@
 .from {
   position: relative;
-  height: 847px;
+  height: 858px;
   padding-top: 120px;
   background-image: url("../../img/from/plane-bg.png");
   background-color: #041D2C;
@@ -119,6 +119,10 @@
     background-color: white;
     opacity: 1;
   }
+}
+
+.country-description {
+  display: none;
 }
 
 @media (max-width: 1530px) {
@@ -277,6 +281,23 @@
       &_active {
         display: block;
       }
+    }
+  }
+}
+
+@media (max-width: 1000px) {
+  .country__descr_active {
+    display: none;
+  }
+  .country-description {
+    display: block;
+    margin-top: 17px;
+    font-size: 14px;
+    line-height: 24px;
+    color: #BCC9DA;
+    & strong {
+      color: white;
+      opacity: 1;
     }
   }
 }
